# hadron_anki

./: .gitignore  README.md  build_deck.py  inspect_catalog.py  pyproject.toml  tests_decay.txt
.github/workflows/: card-preview.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-import.txt  task-1-pip-install.txt  task-2-yaml-print.txt  task-3-pytest-templates.txt  task-4-pytest-svg.txt  task-5-pytest-composer.txt  task-6-pytest-deck.txt
.sisyphus/notepads/hadron-anki-tdd-scaffold/: learnings.md
.sisyphus/plans/: hadron-anki-tdd-scaffold.md
catalogs/: core_decays.yaml  core_particles.canonical.yaml  core_particles.yaml
data/examples/: hadron_schema_example.yaml
docs/: pedagogical_schema.md
src/hadron_anki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hadron_anki/cards/: mapping.py  sections.py  styles.py  tags.py  templates.py
src/hadron_anki/catalog/: bootstrap_decays.py  bootstrap_particle.py  build.py  canonical_loader.py  (+2 more)
style/: hadron_anki_style.jsonc
tests/: conftest.py  test_bootstrap_particle.py  test_canonical_loader.py  test_canonical_validator.py  test_card_mapping.py  test_card_styles.py  test_catalog_loader.py  test_composer.py  test_core_canonical_catalog.py  test_decay_bootstrap.py  test_decay_diagram.py  test_deck_apkg.py  test_feynman.py  test_legacy_adapter.py  test_mass_summary.py  test_math_labels.py  test_pedagogical_derivations.py  test_preview.py  test_render_config.py  test_renderer_svg.py  test_sections.py  test_tags.py  test_templates.py
tests/fixtures/: catalog_min.yaml
tools/: preview_snapshot.py
(+19 files in other folders)
