[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hadron-anki"
version = "0.1.0"
description = "A TDD-first Anki card generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "genanki",
    "pyyaml",
    "particle",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
addopts = "--basetemp=.tmp"

[tool.setuptools.packages.find]
where = ["src"]
